src/test/deca/context/invalid/exp_print_boolean.deca
// Test of the rule 3.31: Can't print an object whose type is not
// a float, an int, or a string

{

    print(true);
}

// Resultat:
//# TODOTEST 
